--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
                 <li>CONTACT</li>
             </ul>
         </nav>
+        <hr>
+        <h1>Welcome to my portfolio</h1>
     </header>
+    <section>
+        <h2>Introduction</h2>
+        <p>Hi there my name is Sharon Chepkirui  and I am a recent graduate student from the University of Eldoret. I  am curious by nature and intuitive when it comes to problem solving and using technology. I thank you for taking your time to visit my portfolio. While you visit my portfolio ,you will learn more about me,some of the issues and facts that make me who I am.
+        </p>
+    </section>
     
 
     
