--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav">
             <ul>
-                <li>HOME</li>
-                <li>ABOUT</li>
-                <li>CONTACT</li>
+                <li><a href="index">home</a></li>
+                <li><a href="index">about</a></li>
+                <li><a href ="index">contact</a></li>
             </ul>
         </nav>
+        <h1 class = "band-name">Welcome to my portfolio</h1>
+
         <hr>
-        <h1>Welcome to my portfolio</h1>
+        
     </header>
-    <section>
+    <section <Images src="./Images" >
         <h2>Introduction</h2>
-        <p>Hi there my name is Sharon Chepkirui  and I am a recent graduate student from the University of Eldoret. I  am curious by nature and intuitive when it comes to problem solving and using technology. I thank you for taking your time to visit my portfolio. While you visit my portfolio ,you will learn more about me,some of the issues and facts that make me who I am.
+        <p>Hi there my name is Sharon Chepkirui  and I am a recent graduate student from the University of Eldoret. I am curious by nature and intuitive when it comes to problem solving and using technology. I thank you for taking your time to visit my portfolio. While you visit my portfolio ,you will learn more about me,some of the issues and facts that make me who I am.
         </p>
     </section>
     
