add all changes

--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,13 @@
 <body>
     <h1><ul>
         <li id="active"><a href="index.html">Home</a></li>
+        <li id="active"><a href="my project.html">About</a></li>
         <li id="active"><a href="about.html">About</a></li>
         <li id="active"><a href ="contact.html">Contact</a></li>
         </ul>
     
 
-        Please feel free to contact me via the following;
+        Please feel free to Contact Me via the following;
     </h1>
 
     <ul>
