--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div>
         <nav>
             <ul>
-                <li id="active"><a href="index.html">Home</a></li>
+                <li id="active"><a href="index.html">Home</a></l1>
+                <li id="active"><a href="my project.html">My project</a></li>
                 <li id="active"><a href="about.html">About</a></li>
                 <li id="active"><a href ="contact.html">Contact</a></li>
             </ul>
@@ -24,7 +25,7 @@
     </div>
       
     <div class="content">
-        <h4>Hello ,my name is</h4>
+        <h4>Hi ,my name is</h4>
         <h2>Sharon <span>Chepkirui</span></h2>
         <h3>I am a Software Developer</h3>
         
