add all changes

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
           <li id="active"><a href="index.html">Home</a></li>
-          <li id="active"><a href="MY Project.html">My project</a></li>
+          <li id="active"><a href="my project.html">My project</a></li>
           <li id="active"><a href="about.html">About</a></li>
           <li id="active"><a href ="contact.html">Contact</a></li>
     
