--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li id="active"><a href="index.html">Home</a></l1>
-                <li id="active"><a href="my project.html">My project</a></li>
+                <li id="active"><a href="my project.html">My Project</a></li>
                 <li id="active"><a href="about.html">About</a></li>
                 <li id="active"><a href ="contact.html">Contact</a></li>
             </ul>
