--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <h1><ul>
         <li id="active"><a href="index.html">Home</a></li>
-        <li id="active"><a href="my project.html">About</a></li>
+        <li id="active"><a href="my project.html">My Project</a></li>
         <li id="active"><a href="about.html">About</a></li>
         <li id="active"><a href ="contact.html">Contact</a></li>
         </ul>
