--- a/my project.html
+++ b/my project.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header>
-        <ul><li id="active"><a href="index.html">Home</a></li>
+        <ul>
+            <li id="active"><a href="index.html">Home</a></li>
             <li id="active"><a href="my project.html">My Project</a></li>
             <li id="active"><a href="about.html">About</a></li>
             <li id="active"><a href ="contact.html">Contact</a></li>
