--- a/contact.html
+++ b/contact.html
@@ -9,21 +9,35 @@
     <title>CONTACTS</title>
 </head>
 <body>
-    <h1><ul>
+    <h1>
+        <ul>
         <li id="active"><a href="index.html">Home</a></li>
         <li id="active"><a href="my project.html">My Project</a></li>
         <li id="active"><a href="about.html">About</a></li>
         <li id="active"><a href ="contact.html">Contact</a></li>
         </ul>
-    
-
-        Please feel free to Contact Me via the following;
     </h1>
-
-    <ul>
-        <li class="active"><a href="0728712619">Tel: +254-728712619</a></li> 
-        <li class="active"><a href="sharonchepkirui30@gmail.com">Email: sharonchepkirui30@gmail.com</a></li>
-    </ul>
-    
+    <aside>
+        <form>
+            <h1>CONTACT ME</h1>
+            <div>
+                <label for="Name">Name</label>
+                <input id=Fullnumber type=text/>
+            </div>
+            <br>
+            <div>
+                <label for="Email">Email</label>
+                <input id=Email type=Word/>
+            </div>
+            <br><div>
+                <label for="Phonenumber">Phonenumber</label>
+                <input id=PhoneNumber type=Numbers/>
+            </div>
+            <br>
+            <select id="subject">
+                <option>Messsage</option>
+            </select>
+        </form>
+    </aside>
 </body>
 </html>
