--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="content">
         <h4>Hi ,my name is</h4>
         <h2>Sharon <span>Chepkirui</span></h2>
-        <h3>I am a Software Developer</h3>
+        <h3>I am an Environmentalist</h3>
         
     </div>
    
