add new changes

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,16 @@
         <li id="active"><a href ="contact.html">Contact</a></li>
         </ul>
     </h1>
+    <div>
+        <p>
+        Please feel free to contact me via;
+        <p><a href="+254728712619">Telephone:+254728712619</a></p>
+        <p><a href ="sharonchepkirui30@gmail.com">Email: sharonchepkirui30@gmail.com</a></p>
+        </p>
+    </div>
+
+    </div>
+
     <aside>
         <form>
             <h1>CONTACT ME</h1>
